# summer-camp-2024-comp

./: README.md
battleship/: .gitignore  Makefile  README.md  pyproject.toml
battleship/src/: __init__.py  settings.py  start_game.py
battleship/src/activities/: game.py  player.py
battleship/src/utils/: pydantic_converter.py
battleship/src/workers/: activity_worker.py  workflow_worker.py
battleship/src/workflows/: game.py  player.py
heatmap/: README.md  go.mod  go.sum  main.go
programming-contest/: README.md  go.mod  go.sum  main.go
programming-contest/problems/: sampleproblem1.txt  sampleproblem2.txt
programming-contest/sample-solutions/: sampleproblem1-fail.py  sampleproblem1-pass.py  sampleproblem2-fail.py  sampleproblem2-pass.py
race/: go.mod  main.go
scavenger/: go.mod  go.sum  main.go
sdxl/: README.md  activities.py  requirements.txt  starter.py  worker.py  workflows.py
